@@ -3,6 +3,7 @@ Change log next version
 * Fixed an issue with content-type identification when passing in content-type header manually using a header.
 * Header values supplied to request specification using a java.util.Map are now serialized if needed.
 * Path parameters can now be used in the entire path, not just between two slashes (issue 275, 292).
+* Added ability to set logging from the RequestSpecBuilder, for example new RequestSpecBuilder().log(ALL).build();
 
 Change log 2.1.0 (2013-12-09)
 -----------------------------
